# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  pyproject.toml
pre_commit_hooks/: check_authors.py  check_changelog.py  check_rebase_required.py
pre_commit_hooks/tests/: __init__.py
tests/: test_check_authors.py  test_check_changelog.py  test_check_rebase_required.py
tests/fixtures/templates/: AUTHORS.j2  CHANGELOG.j2
